--- a/BulkyWeb.csproj
+++ b/BulkyWeb.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
 	<TargetFramework>net8.0</TargetFramework>
-	<Nullable>enable</Nullable>
+	<Nullable>disable</Nullable>
 	<ImplicitUsings>enable</ImplicitUsings>
 	<UserSecretsId>5b6076d5-825b-430c-bd7b-def1aa89a5ee</UserSecretsId>
   </PropertyGroup>
@@ -10,11 +10,16 @@
   <ItemGroup>
 	<PackageReference Include="jQuery" Version="3.7.1" />
 	<PackageReference Include="jquery.datatables" Version="1.10.15" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.4.24267.1">
+	<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.6" />
+	<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.0-preview.5.24306.11" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.5.24306.3">
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
-	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0-preview.5.24306.3" />
+	<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.0-preview.5.24306.11" />
+	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0-preview.4.24271.3" />
   </ItemGroup>
 
 	<ItemGroup>
