--- a/BulkyWeb.csproj
+++ b/BulkyWeb.csproj
@@ -12,7 +12,7 @@
 	<PackageReference Include="jquery.datatables" Version="1.10.15" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.6" />
-	<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.0-preview.5.24306.11" />
+	<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.6" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0-preview.5.24306.3">
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
