--- a/BulkyWeb.csproj
+++ b/BulkyWeb.csproj
@@ -20,6 +20,7 @@
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0-preview.5.24306.3" />
 	<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.0-preview.5.24306.11" />
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0-preview.4.24271.3" />
+	<PackageReference Include="Stripe.net" Version="45.0.0" />
   </ItemGroup>
 
 	<ItemGroup>
